--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto Mono', monospace;
 */
 
+h1 {
+    font-family: 'Roboto Mono', monospace;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* NAVIGATION*/
 nav {
     display: flex;
@@ -18,6 +26,10 @@ nav {
     min-height: 8vh;
     background-color: #1b709f;
     font-family: 'Roboto', sans-serif;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 /* LOGO */
@@ -67,6 +79,19 @@ nav {
     transition: all 0.3s ease;
 }
 
+/* SPLASH */
+#splash {
+    background-image: url(splash/splash1.jpg);
+    max-width: none;
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+}
+
+/* FAQ */
+.column {
+    text-align: center;
+}
 
 /* MEDIA Q */
 
