--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
 
 p {
     font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
 }
 
 /* NAVIGATION*/
@@ -30,6 +31,8 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+
+    z-index: 2;
 }
 
 /* LOGO */
@@ -83,14 +86,66 @@ nav {
 #splash {
     background-image: url(splash/splash1.jpg);
     max-width: none;
-    width: 100%;
     height: 60vh;
     background-size: cover;
+    background-position: 100% 50%;
 }
 
 /* FAQ */
 .column {
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #57c8ef;
+}
+
+/* TRENDING */
+#trending {
+    margin-top: 30px;
+}
+
+#trending h1 {
+    text-align: center;
+}
+
+#trending img {
+    height: 300px;
+    width: 300px;
+}
+
+#trending .sectionwrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.column1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    position: relative;
+    flex-grow: 1;
+    flex-basis: 300px;
+
+    margin: 20px;
+}
+
+#trending a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #195b80;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+
+    text-decoration: none;
+    font-family: 'Roboto Mono', monospace;
 }
 
 /* MEDIA Q */
