--- a/style.css
+++ b/style.css
@@ -36,11 +36,9 @@ nav {
 }
 
 /* LOGO */
-.logo {
-    color: #c7c7c7;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-size: 20px;
+.logo img {
+    width: 10vw;
+    height: 10vh;
 }
 
 .nav-links {
@@ -68,6 +66,11 @@ nav {
     padding-right: 2em;
 }
 
+.nav-links a:hover {
+    color: #e68609;
+    text-decoration: underline;
+}
+
 /* BURGER MENU */
 .burger {
     display: none;
@@ -82,6 +85,17 @@ nav {
     transition: all 0.3s ease;
 }
 
+/* FOOTER */
+footer {
+    background-color: #1b709f;
+    height: 5vh;
+}
+
+.footer-p {
+    text-align: center;
+    color: #f0f0f0;
+}
+
 /* SPLASH */
 #splash {
     background-image: url(splash/splash1.jpg);
@@ -94,8 +108,7 @@ nav {
 /* FAQ */
 .column {
     text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px;
     background-color: #57c8ef;
 }
 
@@ -180,6 +193,10 @@ nav {
     .burger {
         display: block;
         cursor: pointer;
+    }
+
+    .column {
+        padding: 40px;
     }
 }
 
