--- a/style.css
+++ b/style.css
@@ -194,6 +194,97 @@ footer {
     width: 100%;
 }
 
+/* DESTINATION*/
+article img {
+    width: 100%;
+    /*            max-width: 100%;*/
+    max-height: 200px;
+    object-fit: cover;
+}
+
+article {
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    box-shadow: 1px 0px 5px 5px grey;
+
+}
+
+#container {
+    width: 90vw;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+
+.valgt {
+    color: white;
+    background-color: lightblue;
+
+}
+
+.pris {
+    font-style: oblique;
+    color: darkblue;
+
+}
+
+.filter {
+    margin: 5px;
+}
+
+
+#popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .8);
+    display: none;
+
+}
+
+#popup article {
+    width: 80vw;
+    height: 80vh;
+    margin: 4rem auto;
+    background-color: #8ECBEB;
+}
+
+#luk {
+    position: fixed;
+    top 0;
+    right: 8em;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    padding: .1em;
+    cursor: pointer;
+}
+
+.oprindelse {
+    font-style: oblique;
+    color: darkblue;
+}
+
+.filtre {
+    width: 100vw;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(175px, 10fr));
+
+
+}
+
+#popup img {
+    max-width: 50%;
+    max-height: 50%;
+}
 
 
 /* MEDIA Q */
