--- a/style.css
+++ b/style.css
@@ -194,6 +194,134 @@ footer {
     width: 100%;
 }
 
+/* Destinationer */
+
+article {
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    box-shadow: 1px 0px 5px 5px grey;
+
+}
+
+.logo img {
+    width: 10vw;
+    height: 10vh;
+}
+
+#container img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+
+}
+
+#container {
+    width: 90vw;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+.valgt {
+    color: white;
+    background-color: lightblue;
+
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    margin: 6rem auto;
+    margin-bottom: 2rem;
+
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.pris {
+    font-style: oblique;
+    color: darkblue;
+
+}
+
+.filter {
+    margin: 5px;
+}
+
+
+#popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .8);
+    display: none;
+
+}
+
+#popup article {
+    width: 80vw;
+    height: 80vh;
+    margin: 6rem auto;
+    background-color: #8ECBEB;
+}
+
+#luk {
+    position: fixed;
+    top 0;
+    right: 8em;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    padding: .1em;
+    cursor: pointer;
+}
+
+.oprindelse {
+    font-style: oblique;
+    color: darkblue;
+}
+
+.filtre {
+    width: 100vw;
+    max-width: 1000px;
+    margin: 3rem auto;
+    margin-top: 1rem;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(175px, 10fr));
+
+
+}
+
+#popup img {
+    max-width: 50%;
+    max-height: 50%;
+}
+
+body {
+    background-color: #57c8ef;
+    /*            z-index: 0;*/
+}
+
+
 
 
 /* MEDIA Q */
