--- a/style.css
+++ b/style.css
@@ -167,12 +167,13 @@ footer {
 #omos {
     margin-top: 10vh;
     background-color: #57C8EF;
+
 }
 
 #omos h1 {
     padding-top: 10px;
     text-align: center;
-    color: #f0f0f0;
+    color: #195b80;
     border-bottom: 1px solid #1b709f;
     margin-left: 300px;
     margin-right: 300px;
@@ -187,7 +188,11 @@ footer {
 }
 
 .column2 {
-    margin: 20px;
+    background-color: #ffffff;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 5px;
 }
 
 .column2 img {
