--- a/style.css
+++ b/style.css
@@ -15,9 +15,16 @@ h2 {
     font-family: 'Roboto Mono', monospace;
 }
 
+h3 {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 1.2em;
+
+
+}
+
 p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
+    font-size: 1em;
 }
 
 /* NAVIGATION*/
@@ -69,7 +76,7 @@ nav {
 
 .nav-links a:hover {
     color: #e68609;
-    text-decoration: underline;
+    text-decoration: line-through;
 }
 
 /* BURGER MENU */
@@ -463,6 +470,10 @@ body {
     }
 
     .column2 h2 {
+        padding-left: 4vw;
+    }
+
+    .column2 h3 {
         padding-left: 4vw;
     }
 }
