--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ h3 {
 
 p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
+    font-size: .8em;
+
 }
 
 /* NAVIGATION*/
@@ -100,6 +101,7 @@ footer {
 }
 
 .footer-p {
+    padding: 5px;
     text-align: center;
     color: #f0f0f0;
 }
@@ -118,6 +120,11 @@ footer {
     text-align: center;
     padding: 30px;
     background-color: #57c8ef;
+}
+
+.column p {
+    margin: 10px 10em 10px 10em;
+
 }
 
 /* TRENDING */
@@ -180,10 +187,12 @@ footer {
 #omos h1 {
     padding-top: 10px;
     text-align: center;
-    color: #195b80;
+    color: white;
     border-bottom: 1px solid #1b709f;
     margin-left: 300px;
     margin-right: 300px;
+
+    font-size: 2em;
 }
 
 .sectionwrapper_omos {
@@ -215,12 +224,7 @@ article img {
     object-fit: cover;
 }
 
-#popup article {
-    border: 1px solid rgba(0, 0, 0, 0.25);
-    padding: 10px;
-    box-shadow: 1px 0px 5px 5px grey;
 
-}
 
 .destination-template article {
     background-color: white;
@@ -257,6 +261,8 @@ article img {
     margin-right: 300px;
     padding-top: 20px;
     margin-bottom: 20px;
+
+    font-size: 2em;
 }
 
 .pris {
@@ -286,9 +292,9 @@ article img {
     width: 80vw;
     height: 80vh;
     margin: 4rem auto;
-    margin: 4rem auto;
+    border-radius: 5px;
 
-    background-color: #8ECBEB;
+    background-color: #f0f0f0;
     overflow: auto;
 
     display: flex;
@@ -297,19 +303,25 @@ article img {
 
 #popup section {
     flex-grow: 1;
-    flex-basis: 200px;
+    flex-basis: 300px;
+
+    margin: 30px;
 }
 
 #luk {
     position: fixed;
     top 0;
     right: 8em;
-    color: black;
+    color: #e68609;
     padding: .1em;
     cursor: pointer;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', sans-serif;
+
 }
 
+#popup h2 {
+    color: #195b80
+}
 
 .filtre {
     width: 100vw;
@@ -330,6 +342,8 @@ article img {
     border: none;
     cursor: pointer;
     border-radius: 5px;
+
+    font-family: 'Roboto Mono', monospace;
 }
 
 .valgt {
@@ -339,8 +353,8 @@ article img {
 }
 
 #popup img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .destination-body {
@@ -354,8 +368,10 @@ article img {
 
 .kort-info p {
     font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: .6em;
 }
-
 
 /* MEDIA Q */
 
@@ -441,6 +457,11 @@ article img {
     body {
         overflow-x: hidden;
     }
+
+    .column p {
+        margin: 10px 5em 10px 5em;
+
+    }
 }
 
 @media screen and (max-width: 1050px) {
@@ -489,4 +510,15 @@ article img {
     .column2 h3 {
         padding-left: 4vw;
     }
+
+    .column p {
+        margin: 10px 2em 10px 2em;
+
+    }
+
+    #luk {
+        right: 3em;
+
+    }
+
 }
