--- a/style.css
+++ b/style.css
@@ -541,4 +541,13 @@ article img {
 
     }
 
+    #splash h1 {
+        top: 50%;
+        left: 15%;
+        font-size: 4em;
+        text-align: center;
+        border: 2.5px solid white;
+        padding-bottom: 8px;
+    }
+
 }
