--- a/style.css
+++ b/style.css
@@ -124,15 +124,21 @@ footer {
     color: white;
 }
 
-#splash .arrow {
-    background-image: url(billeder/arrow.svg);
-    z-index: 1;
+/* ARROW */
+.arrow {
     position: absolute;
-    top: 90%;
-    left: 50%;
-    width: 1vw;
-    height: 1.52vw;
+    border: solid #e68609;
+    border-width: 0 5px 5px 0;
+    display: inline-block;
+    padding: 15px;
 
+    bottom: 5%;
+    left: 50%;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 /* FAQ */
