--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer {
 /* ARROW */
 .arrow {
     position: absolute;
-    border: solid #e68609;
+    border: solid #ff9307;
     border-width: 0 5px 5px 0;
     display: inline-block;
     padding: 15px;
