--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ footer {
 .column {
     text-align: center;
     padding: 30px;
-    background-color: #57c8ef;
+    background-color: white;
 }
 
 .column p {
@@ -157,9 +157,11 @@ footer {
 /* TRENDING */
 #trending {
     margin-top: 30px;
+    background-color: #57c8ef;
 }
 
 #trending h1 {
+    padding-top: 20px;
     text-align: center;
 }
 
@@ -338,7 +340,7 @@ article img {
 #luk {
     position: fixed;
     top: 4rem;
-    right: 8rem;
+    right: 11%;
     color: #e68609;
     padding: .1em;
     cursor: pointer;
@@ -398,6 +400,10 @@ article img {
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: .6em;
+}
+
+.kort-info2 p {
+    font-size: .8em;
 }
 
 /* MEDIA Q */
