--- a/style.css
+++ b/style.css
@@ -276,6 +276,7 @@ article img {
     max-width: 1000px;
     margin: 0 auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
